--- a/templates/index.html
+++ b/templates/index.html
@@ -107,7 +107,7 @@
         <form action="{% url 'sho' %}" method="POST">
           {% csrf_token %}
           
-        <input type="text" name="input_text" placeholder="Enter patient username" />
+        <input type="text" name="input_text" placeholder="Enter Patient's Username" />
         <br />
         <br/>
         <button type="submit" class="btn btn-primary" style="float: center">
