--- a/templates/adhome.html
+++ b/templates/adhome.html
@@ -127,20 +127,21 @@
         <form  action="{% url 'adhome' %}" method="POST" enctype="multipart/form-data">
           {% csrf_token %}
             <div class="form-group">
-              <label for="{{form.file_name.id_for_label}}">File Name</label>
+              <label for="{{form.file_name.id_for_label}}">Patient's Username</label>
                  {{form.file_name}}         
             </div>
+            <br/>
             <div class="form-group">
-                <label for="{{form.files_data1.id_for_label}}">File</label>
+                <label for="{{form.files_data1.id_for_label}}">File 1</label>
                 {{form.files_data1}}         
               </div>
               <div class="form-group">
-                <label for="{{form.files_data2.id_for_label}}">File</label>
+                <label for="{{form.files_data2.id_for_label}}">File 2</label>
                 {{form.files_data2}}         
               </div>
               <!-- {% csrf_token %} -->
             
-            <br />
+            <br /><br/>
             <button type="submit" class="btn btn-primary">Upload</button>
             <br />
             <br/>
